--- a/tools/mkdocs/overrides/main.html
+++ b/tools/mkdocs/overrides/main.html
@@ -38,4 +38,12 @@
 >
   {% include ".icons/material/download.svg" %}
 </a>
-{% endif %} {{ super() }} {% endblock content %}
+{% endif %} {% if page.meta.csv_url %}
+<a
+  href="{{ page.meta.csv_url }}"
+  title="Download data"
+  class="md-content__button md-icon"
+>
+  {% include ".icons/fontawesome/solid/file-csv.svg" %}
+</a>
+{% endif %}{{ super() }} {% endblock content %}
