doc: update meta

--- a/tools/mkdocs/overrides/main.html
+++ b/tools/mkdocs/overrides/main.html
@@ -4,7 +4,7 @@
 <meta property="og:title" content="ipyvizzu-story" />
 <meta
   property="og:description"
-  content="ipyvizzu-story Build, present and share animated data stories in Jupyter Notebook and similar environments"
+  content="ipyvizzu-story - Build, present and share animated data stories in Jupyter Notebook and similar environments"
 />
 <meta property="og:url" content="{{ page.canonical_url }}" />
 <meta
@@ -21,7 +21,7 @@
 <meta name="twitter:title" content="ipyvizzu-story" />
 <meta
   name="twitter:description"
-  content="ipyvizzu-story Build, present and share animated data stories in Jupyter Notebook and similar environments"
+  content="ipyvizzu-story - Build, present and share animated data stories in Jupyter Notebook and similar environments"
 />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@VizzuHQ" />
