--- a/0.11/examples/proglangs/index.html
+++ b/0.11/examples/proglangs/index.html
@@ -2049,7 +2049,7 @@ story.set_feature("tooltip", True)
 
 # Set a handler that prevents showing specific elements
 label_handler_method = (
-    "if(event.detail.text.split(' ')[0] &lt; 5) event.preventDefault()"
+    "if(event.detail.text.split('%')[0] &lt; 5) event.preventDefault()"
 )
 story.add_event("plot-marker-label-draw", label_handler_method)
 
